Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109144

qmllint crashes with annotated function parameter

    XMLWordPrintable

Details

    • 303bfe42e (dev), 93f3b866b (6.4)

    Description

      Trying to lint

      function bar(foo : Foo) {
          let state = foo.whatSUp()
      }
      

      runs into

      $ ninja all_qmllint
      [6/6] cd /home/prcs1076/tmp/untitled && /home/prcs1076/Projekte/qt6-build/qtbas...itled/build/.rcc/appuntitled_raw_qml_0.qrc /home/prcs1076/tmp/untitled/main.qml
      FAILED: CMakeFiles/appuntitled_qmllint /home/prcs1076/tmp/untitled/build/CMakeFiles/appuntitled_qmllint  
      cd /home/prcs1076/tmp/untitled && /home/prcs1076/Projekte/qt6-build/qtbase/bin/qmllint --bare -I /home/prcs1076/tmp/untitled/build -I /home/prcs1076/Projekte/qt6-build/qtbase/qml --resource /home/prcs1076/tmp/untitled/build/.rcc/qmake_untitled.qrc --resource /home/prcs1076/tmp/untitled/build/.rcc/appuntitled_raw_qml_0.qrc /home/prcs1076/tmp/untitled/main.qml
      ASSERT: "it != registers.end()" in file /home/prcs1076/Projekte/qt6-build/qtbase/include/QtQmlCompiler/6.5.0/QtQmlCompiler/private/../../../../../../../qt6/qtdecl
      arative/src/qmlcompiler/qqmljscompilepass_p.h, line 80
      

      . Removing the Foo from the annotation makes it work.

      Attachments

        For Gerrit Dashboard: QTBUG-109144
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            cajus Cajus Pollmeier
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes