qmllint: Read the right register when analyzing calls

CallProperty does not use the accumulator.

Fixes: QTBUG-109144
Change-Id: I2bd98bb3a66d68806d250bd50226a8f8e0cdf765
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 303bfe42e802e80e9f98bc260f9c70ba87639ccd)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>