src/qmlcompiler/qqmljstypepropagator.cpp
@@ -1094,8 +1094,9 @@ void QQmlJSTypePropagator::generate_CallProperty(int nameIndex, int base, int ar
 
     if (m_passManager != nullptr) {
         // TODO: Should there be an analyzeCall() in the future? (w. corresponding onCall in Pass)
-        m_passManager->analyzeRead(m_typeResolver->containedType(m_state.accumulatorIn()),
-                                   propertyName, m_function->qmlScope, getCurrentSourceLocation());
+        m_passManager->analyzeRead(
+                    m_typeResolver->containedType(callBase),
+                    propertyName, m_function->qmlScope, getCurrentSourceLocation());
     }
 
     addReadRegister(base, callBase);
