tests/auto/qml/qmllint/data/Foo.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+QtObject {
+    function whatSUp() : string { return "I'm crashing"; }
+}
