tests/auto/qml/qmllint/data/callBase.qml
@@ -1,0 +1,7 @@
+import QtQml
+
+QtObject {
+    function bar(foo : Foo) {
+        var state = foo.whatSUp()
+    }
+}
